# RostOS

./: .gitignore  .gitmodules  README.md  build.py  build.sh  buildlib.py  clean.sh  create_program.sh  git-submodule-rewrite  init.dmp  install_tools.sh  rost.py  run.py  run.sh  run_vtx.sh  x86_64-rost_os.json
program_template/: main.c
programs/debug/: main.c
programs/gol/: main.c
programs/idle/: main.c
programs/init/: Cargo.toml  (+1 more)
rost_bootloader/: Cargo.toml  README.md
rost_fs/: Cargo.toml  README.md
rost_kernel/: .gitignore  Cargo.toml  d  disk.img  dump  linker.ld  program  program.S  run  run.fish  run.sh  syscall_abi.txt  x86_64-rust_kernel.json
rost_kernel/libc/: keyboard.c  keyboard.h  syscall.c  vga.c  vga.h
rost_kernel/programs/init/: main.c
rost_kernel/programs/pong/: main.c
rost_kernel/src/: boot_info.rs  consts.rs  gdt.rs  main.rs  panic.rs  program  random.rs  routines.S  syscall.rs  vga_buffer.rs
rost_kernel/src/elf/: mod.rs
rost_kernel/src/fs/: mod.rs
rost_kernel/src/interrupt/: handler.rs  mod.rs  pic.rs
rost_kernel/src/interrupt/idt/: handler.rs  mod.rs
rost_kernel/src/keyboard/: mod.rs
rost_kernel/src/memory/: frame_allocator.rs  map.rs  mod.rs  table.rs
rost_kernel/src/process/: mod.rs  signal.rs
rost_kernel/src/time/: mod.rs
rost_kernel/src/vga/: buffer.rs  color.rs  mod.rs  writer.rs
rost_libc/: debug.c  debug.h  keyboard.c  keyboard.h  path.c  path.h  port_io.c  port_io.h  process.c  process.h  std.c  std.h  syscall.c  syscall.h  terminal.c  terminal.h  time.c  time.h  vga.c  vga.h
rost_std/: Cargo.toml
(+48 files in other folders)
